update youtube div width to fix text jumping a little bit when opening youtube video in desktop view

--- a/style.css
+++ b/style.css
@@ -297,6 +297,7 @@ hr {
 
 .youtubeDiv {
   text-align: center;
+  width: calc(1170px / 2);
 }
 
 .youtube {
